project1/minikube/project1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project1-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: client
          image: techhead/react-practice-course-project1:latest
          ports:
            - containerPort: 8080
