project1/minikube/project1-ingress-controller-conig.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/ssl-redirect: 'false'
spec:
  rules:
    - host: project1.local
      http:
        paths:
          - path: /?(.*)
            backend:
              serviceName: project1-cluster-ip-service
              servicePort: 8080
